# 3DGlobeRenderer

./: .clang-format  3DEarthRenderer.qrc  3DGlobeRenderer.qrc  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  DummyCamera.cpp  DummyCamera.h  Earth.cpp  Earth.h  Earth.pro  Earth.qrc  FreeCamera.cpp  FreeCamera.h  Helper.cpp  Helper.h  LICENSE  Main.cpp  Manager.cpp  Manager.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  Node.cpp  Node.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PostBuild.bat  Quad.cpp  Quad.h  README.md  RendererManager.cpp  RendererManager.h  Resources.qrc  Shader.cpp  Shader.h  ShaderManager.cpp  (+5 more)
Libs/qtimgui/lib/: implot.lib  qt_imgui_quick.lib  qt_imgui_widgets.lib  qt_imgui_widgetsd.lib
Resources/Shaders/: Basic.frag  Basic.vert  Combine.frag  Earth.frag  Earth.vert  EarthMousePosition.vert  Globe.frag  Globe.vert  Model.frag  Model.vert  MousePosition.frag  MousePosition.vert  Screen.frag  Screen.vert  ScreenMultisampled.frag  Space.frag  Space.vert
Source/: Controller.h  DummyCamera.cpp  Helper.h  Main.cpp  ModelData.cpp  Shader.cpp  Window.cpp  Window.h
Source/Core/: Constants.h  Controller.cpp  Controller.h  EventHandler.cpp  EventHandler.h  EventListener.h  FailureBehaviour.cpp  FailureBehaviour.h  Window.cpp  Window.h
Source/Node/: Camera.cpp  Camera.h  Earth.cpp  Earth.h  Globe.cpp  Globe.h  ModelData.cpp  ModelData.h  Node.cpp  Node.h  Renderable.h  Space.cpp  Space.h  Sphere.cpp  Sphere.h  Sun.h  Vertex.h
Source/Node/Camera/: ArcballCamera.cpp  ArcballCamera.h  Camera.cpp  Camera.h  PersecutorCamera.cpp  PersecutorCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Source/Renderer/: Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  Window.cpp  Window.h
Source/Structs/: Mouse.h  Texture.h
Source/Util/: Logger.cpp  Logger.h  Macros.h  Math.cpp  Math.h  Misc.cpp  Misc.h  TextureLoader.cpp  TextureLoader.h  Util.cpp  Util.h
Sources/: Controller.cpp  Model.cpp  ModelData.h  Node.cpp  Node.h  PerspectiveCamera.h  ShaderManager.cpp
libs/qtimgui/lib/: imgui.lib  qt_imgui_widgets.lib
resources/Shaders/: EarthMousePosition.frag
src/: Camera.cpp  Camera.h  Controller.cpp  DummyCamera.h  Helper.cpp  Main.cpp  Model.h  Mouse.cpp  Mouse.h  PerspectiveCamera.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Sun.cpp  Sun.h
